--- a/src/main/resources/templates/protocollo/errorList.html
+++ b/src/main/resources/templates/protocollo/errorList.html
@@ -30,6 +30,7 @@
 									<th th:text="#{label.id_provider}">label.id_provider</th>
 									<th th:text="#{label.denominazione_provider}">label.denominazione_provider</th>
 									<th th:text="#{label.oggetto}">label.oggetto</th>
+									<th th:text="#{label.azioni}">label.azioni</th>
 								</tr>
 							</thead>
 							<tbody th:remove="all-but-first">
@@ -43,6 +44,14 @@
 									<td th:text="${protocollo.accreditamento.provider.id}"></td>
 									<td th:text="${protocollo.accreditamento.provider.denominazioneLegale}"></td>
 									<td th:text="${protocollo.oggetto}"></td>
+									<td>
+										<a class="btn btn-danger btn-table single" th:onclick="|confirmAnnullaOrReloadProtocolloModal(${protocollo.id},false)|">
+											<i class="glyphicon glyphicon-remove-circle"> </i> <span th:text="#{label.annulla}"></span>
+										</a>
+										<a th:if="${protocollo.isRieseguibile()}" class="btn btn-warning btn-table single" th:onclick="|confirmAnnullaOrReloadProtocolloModal(${protocollo.id},true)|">
+											<i class="glyphicon glyphicon-step-forward"> </i> <span th:text="#{label.riesegui}"></span>
+										</a>
+									</td>
 								</tr>
 							</tbody>
 						</table>
@@ -50,11 +59,54 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- modal starts here -->
+		<div id="annullaProtocolloModal" class="modal fade" role='dialog'>
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		            <div class="modal-header">
+		                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		                <h4 class="modal-title" th:text="#{label.conferma_azione}">Delete </h4>
+		            </div>
+		            <div class="modal-body">
+		                <span id="annullaProtocolloMsg"></span>
+
+		            </div>
+		            <div class="modal-footer">
+		                <button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{label.indietro}">Cancel</button>
+						<span id='annullaProtocolloButton'></span>
+		            </div>
+
+		        </div>
+		      </div>
+		  </div>
+		<!-- Modal ends here -->
+
 		<script th:inline="javascript">
+			 /*<![CDATA[*/
 			$(document).ready(function() {
 				$('.datatable-responsive-protocollo').DataTable();
 			});
+
+			function confirmAnnullaOrReloadProtocolloModal(protocolloId,reload){
+			    $('#annullaProtocolloModal').modal();
+
+			    var prefix = [[@{/protocollo/}]] + protocolloId;
+				var url;
+
+			    if(reload){
+			    	url = prefix + "/rieseguiProtocollo";
+			    	$('#annullaProtocolloMsg').html("<h2>Si desidera annullare definitivamente il protocollo " + protocolloId + "? L'operazione si conclude con la generazione di una nuova richiesta di protcollazione.</h2>");
+			    }else{
+			    	url = prefix + "/annullaProtocollo";
+			    	$('#annullaProtocolloMsg').html("<h2>Si desidera annullare definitivamente il protocollo " + protocolloId + "?</h2>");
+			    }
+
+			    $('#annullaProtocolloButton').html("<a class='btn btn-danger' href='" + url + "'>Conferma</a>");
+			}
+			/*]]>*/
 		</script>
+
 	</div>
 </body>
 </html>
