#14009 - rimozione controllo codice fiscale a provider

--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -210,7 +210,7 @@
 											<span class="required">*</span>
 										</label>
 										<div class="col-md-6 col-sm-6 col-xs-12">
-											<input type="text" id="cfLegaleRappresentante" name="cfLegaleRappresentante" pattern="codiceFiscale" th:field="${providerForm.legale.anagrafica.codiceFiscale}"
+											<input type="text" id="cfLegaleRappresentante" name="cfLegaleRappresentante" th:field="${providerForm.legale.anagrafica.codiceFiscale}"
 												required="required" class="form-control col-md-7 col-xs-12" />
 										</div>
 										<div th:if="${#fields.hasErrors('providerForm.legale.anagrafica.codiceFiscale')}" class="alert" th:errors="${providerForm.legale.anagrafica.codiceFiscale}"></div>
